Fix issue ICTL-233